bpo-41525: Make the Python program help ASCII-only